# caudex

./: .gitignore  README.md
.github/workflows/: desktop-quality.yml
apps/desktop/: .gitignore  package.json  svelte.config.js  vitest.config.ts
apps/desktop/docs/: ci-quality-gates.md
apps/desktop/scripts/: check-quality-gates.mjs  checksum-artifacts.mjs  prepare-repro-artifacts.mjs  run-benchmarks.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_create_libraries.sql  0002_enforce_single_library.sql  0003_add_import_domain.sql  0004_add_bulk_import_audit.sql  0005_add_retry_source_job_id.sql  0006_add_metadata_enrichment_tables.sql  0007_add_metadata_batch_tables.sql  0008_add_metadata_taxonomy_and_conflicts.sql  0009_add_index_work_unit_lifecycle.sql
apps/desktop/src-tauri/src/: ingest.rs  lib.rs  library.rs  metadata.rs  metadata_batch.rs  metadata_collections.rs  metadata_conflicts.rs  metadata_enrichment.rs  search_index.rs
apps/desktop/src-tauri/src/providers/: google_books.rs  mod.rs  open_library.rs
apps/desktop/src-tauri/tests/: import_pipeline.rs  library_repository.rs  metadata_batch_update.rs  metadata_collections_navigation.rs  metadata_conflict_resolution.rs  metadata_enrichment.rs  metadata_item_editing.rs  search_index_pipeline.rs  search_index_recovery.rs
apps/desktop/src/lib/components/metadata/: collections-browser.svelte  conflict-resolver.svelte  filter-sort-bar.svelte
apps/desktop/src/routes/: +page.svelte  page.test.ts  smoke.test.ts
