[package]
name = "Caudex"
version = "0.1.0"
description = "A modern Calibre Alternative"
authors = ["matteor"]
edition = "2021"
default-run = "Caudex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "appsdesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }
infer = "0.19.0"
lopdf = "0.39.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.13.2", features = ["json"] }
tantivy = "0.25.0"

[dev-dependencies]
tempfile = "3"
